# cse-labs

./: .gitignore
.jxbrowser.userdata/: Local State  Module Info Cache
.jxbrowser.userdata/Default/: History  Preferences  Top Sites  Visited Links  Web Data
.jxbrowser.userdata/GrShaderCache/: data_0  data_1  f_000001  f_000002  index
.jxbrowser.userdata/Local Storage - EXT/: http_127.0.0.1.localstorage
.jxbrowser.userdata/ShaderCache/: data_1  index
2312/: ygb5713.tar
cse2441/: .gitignore
cse2441/cse2441_labs/: README exporting projects.txt
cse2441/verilogFiddle/: BCD2BinarySM  BinSMisValid.v  TwoComp_to_BinarySM.v  bcd_to_7seg.v  clock_div.v  decadeCounter.v  keypad_fsm.v  keypad_input.v  lab6.v  lab7.v  shift_reg.v  verilogTest.v
cse3313/cse3313 Filter design assignment George Boone/: README.txt  cse3313_spring2025_FilterDesignProject_GeorgeBoone.mlx
cse3313/dft part1/: cse3313_DFT_part1_GeorgeBoone.cpp  dft1.out  filter.csv  response.csv
cse3318/: .gitignore
cse3318/lab1/: lab1.c
cse3318/lab3/: a.data  b.data  c.data  d.data  e.data  lab3.c
cse3318/lab4/: a.out  c.out  lab4.c  lab4.h  lab4.out  lab4driver.c  valgrind-out.txt
cse3318/lab5/: a.out  lab5.c  (+1 more)
cse3320/: .gitignore
cse3320/lab3/: Block.hpp  CMakeLists.txt  FAT.cpp  FAT.hpp  main  main.cpp  test.cpp
cse3320/lab3/src/: Block.hpp  FAT.cpp  FAT.hpp  main.cpp
cse3320/lab3/uild/: CMakeCache.txt  Makefile  cmake_install.cmake
cse3341/: .gitignore
cse3442/: .gitignore  readme.txt
cse4352/: .gitignore  .project
cse4372/: .gitignore  synth_to_prog.tcl
homelab/: .gitignore
(+1921 files in other folders)
